--- a/style.css
+++ b/style.css
@@ -71,3 +71,46 @@ img {
 .clear {
   clear: both;
 }
+
+
+@media screen and (max-width: 420px) {
+
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  img{
+    height: 100px;
+  }
+
+  div#lezioni,
+  div#why{
+    background-color: #f2f2cd;
+  }
+
+
+  div.row{
+    width: 100%;
+    margin-top: 0;
+}
+
+  #lezioni .row>.left,
+  #lezioni .row>.right {
+    width: 100%;
+  }
+
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    width: 100%;
+  }
+
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+    background-color: #f2f2cd;
+  }
+
+}
