--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ img {
   }
 
   img{
-    height: 100px;
+    height: 70px;
   }
 
   div#lezioni,
@@ -90,6 +90,12 @@ img {
     background-color: #f2f2cd;
   }
 
+
+  div#lezioni,
+  div#steps,
+  div#why{
+    padding: 1rem;
+  }
 
   div.row{
     width: 100%;
@@ -99,18 +105,28 @@ img {
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 100%;
+    font-size: .9rem;
   }
 
   #steps .row>.left,
   #steps .row>.central,
   #steps .row>.right {
     width: 100%;
+    font-size: .9rem;
   }
 
   #why .row>.first,
   #why .row>.second,
   #why .row>.third {
     background-color: #f2f2cd;
+    margin-top: 20px;
+    font-size: .9rem;
+  }
+
+  #why .row img {
+    background-color: #428bca;
+    border-radius: 50%;
+    padding: 15px
   }
 
 }
